--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -64,13 +64,10 @@
     .box {
       width: fit-content;
       background-color: #027b4f;
-      a {
-        padding: 10px 20px;
-        color: #fff;
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-      }
+      padding: 10px 20px;
+      color: #fff;
+      display: inline-block;
+      cursor: pointer;
     }
     .box:hover {
       background-color: #7077a1;
@@ -83,6 +80,7 @@
   margin: 20px auto;
   .tbl_list_data {
     text-align: center;
+    display: none;
     table {
       width: 100%;
       th,
@@ -103,42 +101,42 @@
           color: #fff;
         }
       }
-      .actions{
-        button{
-            padding: 6px 15px;
-            border: none;
-            font-size: 12px;
-            color: #fff;
-            cursor: pointer;
+      .actions {
+        button {
+          padding: 6px 15px;
+          border: none;
+          font-size: 12px;
+          color: #fff;
+          cursor: pointer;
         }
-        .edit_user{
-            background-color: #046b37;
+        .edit_user {
+          background-color: #046b37;
         }
-        .delete_user{
-            background-color: #b50e0e;
+        .delete_user {
+          background-color: #b50e0e;
         }
       }
     }
   }
 
-  .frm_add_data{
+  .frm_add_data {
     margin: 3rem 0;
-    form{
-        input , select{
-            padding: 10px 25px;
-            width: 25%;
-        }
+    display: none;
+    form {
+      input,
+      select {
+        padding: 10px 25px;
+        width: 25%;
+      }
     }
-    input[type='submit']{
-        background-color: var(--orange-c);
-        border: none;
-        color: #fff;
-        cursor: pointer;
+    input[type="submit"] {
+      background-color: var(--orange-c);
+      border: none;
+      color: #fff;
+      cursor: pointer;
     }
-    input[type='submit']:hover{
-        background-color: #714406;
+    input[type="submit"]:hover {
+      background-color: #714406;
     }
+  }
 }
-}
-
-
